--- a/public/luci-libro/index.html
+++ b/public/luci-libro/index.html
@@ -10,7 +10,9 @@
 
 <body>
   <div class="flipbook">
-    <div class="hard">Para el amor de mi vida <small>~ de parte de valen</small></div>
+  <div class="hard">Para el amor de mi vida
+<small>~ de parte de valen
+</small></div>
     <div class="hard">
       <img src="images/portada.png" alt="" />
     </div>
@@ -46,14 +48,17 @@
     <div class="page">
       <img src="images/foto7.png" alt="" />
     </div>
-    <div class="hard" id="no-movil"></div>
+    <div class="hard"></div>
     <div class="hard">Falta poquito bb<small>~ te amoo</small></div>
   </div>
 
   <!-- Carrusel móvil -->
   <div class="carousel">
     <div class="carousel-page">
-      <div class="hard">Para el amor de mi vida <small>~ de parte de valen</small></div>
+      <div class="hard">
+        <span class="titulo-amor">Para el amor de mi vida</span>
+        <span class="subtitulo-amor">~ de parte de valen</span>
+      </div>
     </div>
     <div class="carousel-page">
       <div class="hard">
@@ -69,7 +74,7 @@
     </div>
     <div class="carousel-page">
       <div class="page">
-        <img src="./luci-libro/images/luci.png" alt="" />
+        <img src="images/luci.png" alt="" />
       </div>
     </div>
     <div class="carousel-page">
@@ -113,10 +118,8 @@
       </div>
     </div>
     <div class="carousel-page">
-      <div class="hard"></div>
-    </div>
-    <div class="carousel-page">
-      <div class="hard">Falta poquito bb<small>~ te amoo</small></div>
+        <span class="titulo-amor">Falta porquito bb</span>
+        <span class="subtitulo-amor">~ te amoo</span>
     </div>
   </div>
 
