--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Para mi Luci 💕</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <meta name="theme-color" content="#FF8FA3" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <!-- Para navegadores modernos -->
+<meta name="theme-color" content="#FF8FA3" />
+
+<!-- Para iOS cuando se añade a la pantalla de inicio -->
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
   </head>
   <body>
     <div id="root"></div>
