--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Para mi Luci 💕</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Para navegadores modernos -->
-<meta name="theme-color" content="#FF8FA3" />
+<!-- Permitir que la app use la pantalla completa -->
+<meta name="apple-mobile-web-app-capable" content="yes">
 
-<!-- Para iOS cuando se añade a la pantalla de inicio -->
-<meta name="apple-mobile-web-app-capable" content="yes" />
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+<!-- Hacer la barra de estado translúcida para mostrar tu fondo -->
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
 
   </head>
   <body>
